[metadata]
name = qcw
url = https://github.com/nelimee/qcw
author = Adrien Suau
description = Universal and consistant interface to access information from quantum circuits implemented using different framework
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 Software License
license_files = LICENSE
keywords = quantum circuit framework wrapper
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
package_dir=
    = src
include_package_data = True    
                 

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
lsp =
    python-lsp-server[flake8,mccabe,pycodestyle,pydocstyle,pyflakes,pylint,rope]
    pylsp-mypy
    python-lsp-black
    pylsp-rope
dev =
    ipython
    black
    %(lsp)s
tests =
    pytest>=6.0
    pyyaml
all =
    %(dev)s
    %(tests)s
